# fastApi-learnings

./: .env  .gitignore  main.py  pyproject.toml  test.db
app/: app.py  db.py  images.py  schema.py
